<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reminda</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_todo_message">Start adding ToDos by clicking the add button</string>
    <string name="add_todo">Add ToDo</string>
    <string name="todo_title">Title</string>
    <string name="todo_message">Message</string>
    <string name="todo_date">Date</string>
    <string name="todo_time">Time</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="notification_message">Notification Message</string>
    <string name="create_todo">Create ToDo</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="warning_empty_name">Name can not be empty</string>
    <string name="initial_timer_time">00:00:00</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="lap">Lap</string>
    <string name="saveSprint">Save Sprint</string>
    <string name="time">Time</string>
    <string name="counter">Counter</string>
</resources>
