<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

	<TextView
		android:text="@string/todo_title"
		android:id="@+id/todo_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22sp"
		android:layout_gravity="center"></TextView>
	<TextView
		android:text="@string/todo_message"
		android:id="@+id/todo_message"
		android:gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22sp"></TextView>
	
	<TextView
		android:text="@string/todo_date"
		android:id="@+id/todo_date"
		android:gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22sp"></TextView>
	
	<TextView
		android:text="@string/todo_time"
		android:id="@+id/todo_time"
		android:gravity="center"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textSize="22sp"></TextView>
</LinearLayout>
