<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginBottom="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timer_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/counter" 
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/timer_message"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:text="@string/message" />
    </LinearLayout>

    <TextView
        android:id="@+id/timer_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/time" />

</LinearLayout>