<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/timer_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/initial_timer_time"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_margin="25dip" />


    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" 
        android:layout_marginBottom="25dip">

        <NumberPicker
            android:id="@+id/long_hr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView />

        <NumberPicker
            android:id="@+id/long_min"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView />

        <NumberPicker
            android:id="@+id/long_sec"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView />

    </TableRow>
    
    
    <EditText
        android:id="@+id/timer_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginBottom="25dip"
        android:hint="@string/notification_message" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancelButtonTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/startButtonTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/start" />
    </LinearLayout>

</LinearLayout>